--- a/CV.Rmd
+++ b/CV.Rmd
@@ -1,15 +1,15 @@
 ---
 name: Naveen
 surname: Kannan
-position: "Research Associate"
+position: "Database Engineer"
 address: "Cleveland, Ohio | United States Permanent Resident"
-www: naveenkannan.netlify.app
+www: naveenk2022.github.io/quarto_blog
 phone: +1 973 519 5397
 email: "naveen.kannan12@gmail.com"
 github: naveenk2022
 linkedin: naveen-kannan-177120118
 date: "`r format(Sys.time(), '%B %Y')`"
-aboutme: "Data Scientist and Bioinformatician with 2+ years of research experience applying advanced data analytics and machine learning to human genomic data. Experienced in automated deployment of scientific workflows with cutting edge machine learning, data analytics, and bioninformatics tools, with a strong passion for enabling easy access to Big Data tools and containers."
+aboutme: "Experienced Bioinformatics Data Engineer with 3+ years of expertise in designing scalable ETL pipelines, integrating large-scale biological datasets, and building robust data infrastructure to support cutting-edge research. Proven track record in establishing best practices for data architecture, collaborating cross-functionally to align systems with analytical goals, and driving innovative solutions for biological discovery and therapeutic development."
 headcolor: 414141
 output: 
   vitae::awesomecv
@@ -75,13 +75,13 @@ tribble(
    ~`Databases`,
    ~`Bioinformatics Tools`,
    ~`Databases`,
-  "Unix, Kubuntu Debian Linux, Fedora Red Hat Linux, Raspbian Debian Linux, Windows 11",
+  "Debian, Ubuntu, Fedora Red Hat Linux, Raspbian Linux, Windows 11",
   "Python, R, Bash, SQL",
   "Hadoop/Spark/Hive, Jupyter, Docker, Singularity, SLURM, Ansible",
   "Geopandas, sf(R), QGIS, ArcGIS",
   "LaTeX, Markdown, RMarkdown",
   "Git, GitHub, gh client",
-  "PySpark, Tensorflow, Pytorch, pandas, scikit-learn, numpy, scipy",
+  "PySpark, Tensorflow, Pytorch, scikit-learn, scipy",
   "HDFS(Hadoop Distributed File System), PostgreSQL server",
   "samtools, BCFtools, HTSlib, Tabix",
   "HDFS(Hadoop Distributed File System), PostgreSQL server"
